Code refactoring. Move AlignMiddle component into NopainUI and use it in Fixed component as well.

--- a/client/components/app.scss
+++ b/client/components/app.scss
@@ -63,7 +63,6 @@ body{
 			.menuPlaceholder{
 				text-align: center;
 				width: 100%;
-				padding:0 30px;
 				.left-border{
 					
 				}
